--- a/client/src/components/Application/Tour/scorecard.css
+++ b/client/src/components/Application/Tour/scorecard.css
@@ -4,7 +4,7 @@
     font-size: 0.75em;
     display: relative;
   }
-  .ag-theme-balham .ag-row-hover{
-
-    background-color: #ECF0F1;
+  .ag-row-hover {
+    /* putting in !important so it overrides the theme's styling as it hovers the row also */
+    background-color: #dfdfff !important;
 }
